style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
}

html {
    font-family: "Roboto";
}

body {
    display: flex;
    flex-direction: column;
    width: 100vw;
}

#header {
    background-color: #1f2937;
    color: white;
    display: flex;
    padding: 20px 15vw;
    justify-content: space-between;
}

#logo {
    font-weight: 700;
}

ul {
    display: flex;
    gap: 2vw;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: inherit;
}

#s1-wrapper {
    background-color: #1f2937;
    display: flex;
    justify-content: center;
}

#segment1 {
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 70vw;
    padding: 48px 0;
    flex-wrap: wrap;
    gap: 30px;
}

#description {
    display: flex;
    flex-direction: column;
    width: 400px;
    max-width: 600px;
    max-height: 250px;
    flex: 1 0 auto;
}

#description-title {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    flex-grow: 1;
}

#description-text {
    font-size: 18px;
    color: #e5e7eb;
    flex-grow: 1;
}

button {
    background-color: #3882F6;
    color: inherit;
    font-size: 18px;
    font-weight: bold;
    width: 120px;
    padding: 4px 8px;
    border: none;
    border-radius: 10px;
}

#segment1 img {
    max-height: 250px;
}

#segment2 {
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-bottom: 160px;
}

#random-inf {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    padding: 40px 0;
}

#random-img {
    display: flex;
    width: 60vw;
    gap: 2vw;
    flex-wrap: wrap;
    justify-content: center;
}

.random-item {
    display: flex;
    flex-direction: column;
    width: 250px;
    flex-shrink: 0;
    gap: 8px;
}

.random-item img {
    width: 100%;
    height: auto;
    border: solid #3882F6 5px;
    border-radius: 10px;
    box-sizing: border-box;
}

.img-desc {
    text-align: center;
}

#segment3 {
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 100px 0;
}

#quote {
    width: 60vw;
    color: #1f2937;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
}

#quote-author {
    width: 60vw;
    text-align: right;
    font-weight: bold;
    padding-top: 10px;
    padding-right: 120px;
}

#segment4 {
    display: flex;
    justify-content: center;
    padding: 80px 0;
}

#signup-wrapper {
    display: flex;
    width: 70vw;
    padding: 40px 5vw;
    background-color: #3882f6;
    justify-content: space-between;
    border-radius: 10px;
    color: white;
}

#signup-text {
    display: flex;
    flex-direction: column;
}

#signup-title {
    font-size: 18px;
    font-weight: bold;
}

#button-bottom {
    border: solid white 2px;
    color: inherit;
}

#footer {
    display: flex;
    background-color: #1f2937;
    color: white;
    padding: 20px 0;
    justify-content: center;
}

